desktop/Expemerent.UI/Native/SciterDomApi.cs


        /// <summary>
        /// Create Element.CreateElement as copy of existing element, Element.CreateElement is a full (deep) copy of the element and
        /// is disconnected initially from the DOM.
        /// Element created with ref_count = 1 thus you \b must call Sciter_UnuseElement on returned handler.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterCloneElement(IntPtr he, out IntPtr phe);

        /// <summary>
        /// Insert element at index position of parent.
        /// It is not an error to insert element which already has parent - it will be disconnected first, but 
        /// you need to update elements parent in this case. 
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterInsertElement(IntPtr he, IntPtr hparent, int index);

        /// <summary>
        /// Take element out of its container (and DOM tree). 
        /// Element will be destroyed when its reference counter will become zero
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterDetachElement(IntPtr he);

        /// <summary>
        /// Start Timer for the element. 
        /// Element will receive on_timer event
        /// To stop timer call SciterSetTimer( element, 0 );
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetTimer(IntPtr he, int milliseconds);

        /// <summary>
        /// Attach/Detach ElementEventProc to the element 
        /// See htmlayout::event_handler.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterDetachEventHandler(IntPtr he, IntPtr pep, IntPtr tag);

        /// <summary>
        /// Attach ElementEventProc to the element and subscribe it to events providede by subscription parameter
        /// See Sciter::attach_event_handler.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterAttachEventHandler(IntPtr he, IntPtr pep, IntPtr tag);

        /// <summary>
        /// Attach/Detach ElementEventProc to the Sciter window. 
        /// All events will start first here (in SINKING phase) and if not consumed will end up here.
        /// You can install Window EventHandler only once - it will survive all document reloads.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterWindowAttachEventHandler(IntPtr hwnd, /*[MarshalAs(UnmanagedType.FunctionPtr)] ElementEventProc*/ IntPtr pep, IntPtr tag, EVENT_GROUPS subscription);

        /// <summary>
        /// Attach/Detach ElementEventProc to the Sciter window. 
        /// All events will start first here (in SINKING phase) and if not consumed will end up here.
        /// You can install Window EventHandler only once - it will survive all document reloads.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterWindowDetachEventHandler(IntPtr hwnd, /*[MarshalAs(UnmanagedType.FunctionPtr)] ElementEventProc*/ IntPtr pep, IntPtr tag);

        /// <summary>
        /// SendEvent - sends sinking/bubbling event to the child/parent chain of element element.
        /// First event will be send in SINKING mode (with SINKING flag) - from root to element element itself.
        /// Then from element element to its root on parents chain without SINKING flag (bubbling phase).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSendEvent(IntPtr he, int appEventCode, IntPtr heSource, IntPtr reason, out bool handled);

        /// <summary>
        /// PostEvent - post sinking/bubbling event to the child/parent chain of element element.
        /// Function will return immediately posting event into input queue of the application. 
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterPostEvent(IntPtr he, int appEventCode, IntPtr heSource, IntPtr reason);

        /// <summary>
        /// SciterCallMethod - calls behavior specific method.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterCallBehaviorMethod(IntPtr he, ref METHOD_PARAMS param);

        /// <summary>
        /// SciterRequestElementData - request data download for the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRequestElementData(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] String url, uint dataType, IntPtr initiator);

        /// <summary>
        /// SciterSendRequest - send GET or POST request for the element
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterHttpRequest(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] String url, uint dataType, uint requestType, IntPtr requestParams, uint nParams);

        /// <summary>
        /// SciterGetScrollInfo - get scroll info of element with overflow:scroll or auto.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetScrollInfo(IntPtr he, out Point scrollPos, out Rectangle viewRect, out Size contentSize);

        /// <summary>
        /// SciterSetScrollPos - set scroll position of element with overflow:scroll or auto.
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetScrollPos(IntPtr he, Point scrollPos, bool smooth);

        /// <summary>
        /// SciterIsElementVisible - deep visibility, determines if element visible - has no visiblity:hidden and no display:none defined 
        /// for itself or for any its parents.
        /// </summary> 
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterIsElementVisible(IntPtr he, out bool pVisible);

        /// <summary>
        /// SciterIsElementEnabled - deep enable state, determines if element enabled - is not disabled by itself or no one 
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterIsElementEnabled(IntPtr he, out bool pEnabled);

        /// <summary>
        /// SciterSortElements
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSortElements(IntPtr he, uint firstIndex, uint lastIndex, [MarshalAs(UnmanagedType.FunctionPtr)] ElementComparator cmpFunc, IntPtr cmpFuncParam);

        /// <summary>
        /// SciterTraverseUIEvent - traverse (sink-and-bubble) MOUSE or KEY event.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterTraverseUIEvent(EVENT_GROUPS evt, IntPtr eventCtlStruct, out bool bOutProcessed);

        ///** SciterRange*** - range manipulation routines. 
        // ATTN: Not completed yet */
        //enum ADVANCE_TO 
        //{
        // GO_FIRST = 0,
        // GO_LAST = 1,
        // GO_NEXT = 2,
        // GO_PREV = 3,
        // GO_NEXT_CHAR = 4,
        // GO_PREV_CHAR = 5,
        //};
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeCreate(); //IntPtr element, HRANGE* pRange, BOOL outer);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeFromSelection(); //IntPtr element, HRANGE* pRange);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeFromPositions(); //IntPtr element, HPOSITION* pStart, HPOSITION* pEnd);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeUse(); //HRANGE range);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeFree(); //HRANGE range);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeAdvancePos(); //HRANGE range, uint cmd, INT* c, HPOSITION* pPos);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeToHtml(); //HRANGE range, LPBYTE* pHtmlUtf8Bytes, uint* numBytes);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeReplace(); //HRANGE range, LPBYTE htmlUtf8Bytes, uint numBytes);
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRangeInsertHtml(); //HPOSITION* pPos, LPBYTE htmlUtf8Bytes, uint numBytes);

        /// <summary>
        /// CallScriptingMethod - calls scripting method defined for the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterCallScriptingMethod(IntPtr he, [MarshalAs(UnmanagedType.LPStr)] String name, [MarshalAs(UnmanagedType.LPArray)] JsonValue[] argv, int argc, out JsonValue retval);

        /// <summary>
        /// Attach HWND to the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterAttachHwndToElement(IntPtr he, IntPtr hwnd);

        /// <summary>
        /// get value of the element. 'value' is value of correspondent behavior attached to the element or its text.
        /// HELEMENT, element which value will be retrieved.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetValue(IntPtr he, ref JsonValue pval);

        /// <summary>
        /// set value of the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetValue(IntPtr he, ref JsonValue pval);

        /// <summary>
        /// get 'expando' of the element. 'expando' is a scripting object (of class Element) 
        /// that is assigned to the DOM element. 'expando' could be null as they are created on demand by script.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetExpando(IntPtr he, ref JsonValue pval, int forceCreation);

        #endregion

        /// <summary>
        /// Releases the mouse capture from the specified element.
        /// </summary>
        /// <param name="element"></param>
        public void ReleaseCapture(Element element)
        {
            SciterReleaseCapture(element.Handle);
        }

        /// <summary>
        /// Deletes element from the DOM Tree
        /// </summary>        
        public void DeleteElement(Element element)
        {
            IntPtr parent;
            CheckResult(SciterGetParentElement(element.Handle, out parent));
            CheckResult(SciterDetachElement(element.Handle));
            CheckResult(SciterUpdateElement(parent, true));
        }
    }

    #endregion
}